<resources>
    <string name="app_name">7asryan</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="register_to_see_the_latest_news">Register to see the latest news!</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="back">Back</string>
    <string name="phone_number">Phone Number</string>
    <string name="user_is_exist_you_can_login">User is exist!</string>
    <string name="login">Login</string>
    <string name="for_the_purpose_of_security">For The purpose of Security</string>
    <string name="link">Link:</string>
    <string name="favorites">Favorites</string>
    <string name="shared_pref">com.example.a7asryan.ama</string>


</resources>