<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/loginScreen">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.a7asryan.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_loginScreen"
            app:destination="@id/loginScreen" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.a7asryan.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.a7asryan.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/loginScreen"
        android:name="com.example.a7asryan.login.view.LoginScreen"
        android:label="fragment_login_screen"
        tools:layout="@layout/fragment_login_screen" >
        <action
            android:id="@+id/action_loginScreen_to_register"
            app:destination="@id/register" />
        <action
            android:id="@+id/action_loginScreen_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/register"
        android:name="com.example.a7asryan.register.view.Register"
        android:label="fragment_register"
        tools:layout="@layout/fragment_register" >
        <action
            android:id="@+id/action_register_to_loginScreen"
            app:destination="@id/loginScreen" />
        <action
            android:id="@+id/action_register_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
</navigation>